
bp 2015/06/13
  bug: bep_201506-2
  When sending documents by mail, the users name, from and reply-to email is not set.
  Fix: In User.pm function crete_config function the user's name and email address were not retrieved
  from table employee.

bp 2015/06/04
bugfix
  bug: bep_201506-1
  When writing user configuration files the system displays "Wide characters in print"
  Fix: problem was caused by Unicode characters in the users profile. Had to enable UTF-8 output when
  writing the user configuration file

bp 2015/06/04
bugfix
  bug: bep_201505-1
  After updating to Debian jessie and Perl 5.20 many "wide error in print" messages are showing.
  Problem shows if the used encoding is UTF-8. Posting of data is not possible anymore.
  Fix: added: binmode STDOUT, ":utf8"; to routine dbconnect in Form.pm

bp 2015/05/07
  bug: bep_201505-2
  The optional loading of the "exchangerate_lookup.pl" caused a browser 500 error because the Finance::Quote
  was not available.
  Fix: load the program with 'eval'. If the program is not correct reset the $get_exrate_prog variable

bp 2015/05/26
bugfix
  bug: bep_201505-3
  Following the upgrade to Debian 8 (Jessie) Ledger didn't work anymore. Sreen showed one or more lines reading:
  "Wide characters in print", Japanese strings were partly garbled and transactions could not be entered.
  Fix: Jessie ships with Perl 5.20 - and in this Perl version the Unicode handling is stricter than in previous
  versions. Main problems were the correct declaration of an UTF-8 environment and escaping/unescaping of UTF-8
  strings.

bp 2015/4/23
bugfix
  bug: bep_201504-5
  When printing the payslip address, phone, fax, companywebsite are not printed.
  Amended program arapprn.pl to retrieve system defaults for address, tel, fax, companywebsite


bp 2015/4/14
bugfix
  bug: bep_201504-3
  Exempt deductions are not included in the gross wage. "Exempt" means that these amounts are not included